syntax="proto3";
package event;

service EventHandler {
	rpc FindAll (Filter) returns (ResponseFindAll);
}

message Filter {
	int32 Page = 1;
	int32 Limit = 2;
	string Sort = 3;
	string OrderBy = 4;
}

message Meta {
	int32 Page = 1;
	int32 Limit = 2;
	int64 TotalRecords = 3;
	int64 TotalPages = 4;
}

message Event {
	string ID = 1;
	string ReplyToken = 2;
	string Type = 3;
	string Timestamp = 4;
	string SourceID = 5;
	string SourceType = 6;
	string Error = 7;
	message Message {
		string ID = 1;
		string Type = 2;
		string Text = 3;
		string Response = 4;
	}
	Message message = 8;
}

message ResponseFindAll {
	bool Success = 1;
	string Message = 2;
	Meta Meta = 3;
	repeated Event Events = 4;
}
